# pico-shell

src/: CMakeLists.txt  handlers.cpp  shell_task.cpp
src/commands/: benchmark.cpp  board_help.cpp  commands.h  examples.cpp
src/shell/: CMakeLists.txt
src/shell/shell_commands_common/: CMakeLists.txt
src/shell/shell_commands_common/commands/: crc32.cpp  dump.cpp  echo.cpp
src/shell/shell_commands_common/include/shell/: commands_common.h
src/shell/shell_commands_freertos/: CMakeLists.txt
src/shell/shell_commands_freertos/commands/: tasks.cpp
src/shell/shell_commands_freertos/include/shell/: commands_freertos.h
src/shell/shell_commands_pico/: CMakeLists.txt
src/shell/shell_commands_pico/commands/: chip_id.cpp  i2c_scan.cpp  pico_clocks.cpp  sensors.cpp
src/shell/shell_commands_pico/include/shell/: commands_pico.h
src/shell/shell_main/: CMakeLists.txt  Console.cpp  History.cpp  Packet.cpp  Parser.cpp  Shell.cpp
src/shell/shell_main/include/shell/: Console.h  History.h  Input.h  Packet.h  Parser.h  Shell.h
src/utils/crc/: CMakeLists.txt  crc32.c
src/utils/crc/include/utils/: crc32.h
